k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  selector:
    app: wisecow
  type: NodePort           
  ports:
    - protocol: TCP
      port: 80             
      targetPort: 4499    
      nodePort: 30000
